WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
288467
REGRESSION(
290780@main
] [GTK][WPE] Rendering updates sometimes stop
https://bugs.webkit.org/show_bug.cgi?id=288467
Summary
REGRESSION(290780@main] [GTK][WPE] Rendering updates sometimes stop
Carlos Garcia Campos
Reported
2025-02-25 02:03:44 PST
This happens when compositing run loop is idle and a new update is requested, sometimes if the update is run too fast it happens before the main thread has updated the request id.
Attachments
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2025-02-25 02:08:36 PST
Pull request:
https://github.com/WebKit/WebKit/pull/41280
EWS
Comment 2
2025-02-25 02:21:32 PST
Committed
291016@main
(49085ab3d17c): <
https://commits.webkit.org/291016@main
> Reviewed commits have been landed. Closing PR #41280 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug