REGRESSION(290780@main] [GTK][WPE] Rendering updates sometimes stop https://bugs.webkit.org/show_bug.cgi?id=288467

Reviewed by Nikolas Zimmermann and Miguel Gomez.

This happens when compositing run loop is idle and a new update is
requested, sometimes if the update is run too fast it happens before the
main thread has updated the request ID. So, always update the request ID
before scheduling the new update.

* Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/ThreadedCompositor.cpp:
(WebKit::ThreadedCompositor::requestComposition):

Canonical link: https://commits.webkit.org/291016@main